--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright 2017 Yan Zhenjie
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,13 +13,11 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/MatchParent">
 
-    <android.support.design.widget.CoordinatorLayout
-        style="@style/MatchParent">
+    <android.support.design.widget.CoordinatorLayout style="@style/MatchParent">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar_layout"
@@ -39,7 +36,7 @@
                     android:scaleType="fitXY"
                     android:src="@mipmap/head_logo"
                     app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.9"/>
+                    app:layout_collapseParallaxMultiplier="0.9" />
 
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
@@ -48,7 +45,7 @@
             android:id="@+id/rv_start_activity"
             style="@style/MatchParent"
             android:background="@color/white"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </android.support.design.widget.CoordinatorLayout>
 
@@ -58,8 +55,7 @@
         android:background="?colorPrimary"
         android:orientation="vertical">
 
-        <com.yanzhenjie.statusview.StatusView
-            style="@style/WrapContent.WidthMatchParent"/>
+        <com.yanzhenjie.statusview.StatusView style="@style/WrapContent.WidthMatchParent" />
 
         <LinearLayout
             android:id="@+id/toolbar_root"
@@ -75,7 +71,7 @@
                 android:layout_marginStart="@dimen/dp_12"
                 android:src="@mipmap/ic_launcher"
                 app:civ_border_color="@color/white"
-                app:civ_border_width="@dimen/dp_2"/>
+                app:civ_border_width="@dimen/dp_2" />
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
@@ -84,7 +80,7 @@
                 app:subtitle="@string/nohttp_slogan"
                 app:subtitleTextColor="@color/white"
                 app:title="@string/app_name"
-                app:titleTextColor="@color/white"/>
+                app:titleTextColor="@color/white" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
